# cpp-http-server

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: main.cpp  net.cpp  net.h  server.cpp  test_client.cpp
src/config/: platform.h  server.h
src/http/: c  config.h  errors.cpp  errors.h  headers.cpp  headers.h  http.cpp  http.h  mime.cpp  mime.h  parser.cpp  parser.h  parser.rl  req_parser.cpp  req_parser.h  req_parser.rl  req_reader.cpp  req_reader.h  request.h  response.cpp  response.h  utils.cpp  utils.h
src/http_parser/: fsm.dot  http11_parser.cpp  http11_parser.h  http11_parser.rl  pa.dot  test_http11_paser.cpp  test_request_line.cpp
src/include/: debug_config.h.in
src/server/: client.cpp  client.h  commons.h  config.h  context.cpp  context.h  droxy.cpp  droxy.h  globals.cpp  globals.h  handlers.cpp  handlers.h  server.cpp  server.h  signals.cpp  signals.h  tasks.cpp  tasks.h
src/utils/: c  files.cpp  files.h  helpers.cpp  helpers.h  llist.cpp  llist.h  logging.h  net.cpp  net.h
tests/: main.cpp  test_http_parser.cpp
tests/http/: test_headers.cpp  test_http_parser.cpp  test_mime.cpp  test_req_reader.cpp  test_response.cpp  test_urls.cpp
tests/integration/: README.md  conftest.py  pyproject.toml
tests/integration/tests/: test_pipelining.py  test_proxying.py  test_smoke.py
tests/integration/tests/lib/: http.py  socket.py
tests/unit/: main.cpp
tests/unit/http/: test_headers.cpp  test_req_reader.cpp  test_response.cpp  test_urls.cpp
tests/unit/misc/: helpers.cpp  helpers.h
tests/unit/server/: test_server.cpp  test_tasks.cpp
tests/unit/utils/: test_helpers.cpp  test_llist.cpp
tests/utils/: test_helpers.cpp
